abort merge